# SmartClaw

./: .env.example  .gitignore  ARCHITECTURE_REPORT.md  Dockerfile  QuickStart.md  README.md  deploy_event_bus.sh  docker-compose.ha.yml  docker-compose.replicas.yml  docker-compose.yml  environment.yml  mypy.ini  pyproject.toml  requirements-runtime.txt  requirements_global.txt  setup.sh.example
config/: config.toml  config.toml.template
deploy/: README.md  smartclaw.service
deploy/nginx/: replicas.conf  replicas_ha.conf
docker/: Dockerfile.base
scripts/: _verify_tenant_api_server.py  build-rootfs.sh  build-vmlinux.sh  docker-deploy.sh  fc.py  install.sh  migrate_sqlite_to_postgres.py  setup_conda_env.sh  test-vsock.py  update-rootfs.sh  verify_agent_turn.py  verify_embedding.py  verify_governance_redis.py  verify_memory_isolation.py  verify_multi_replica.py  verify_p0_hardening.py  verify_sandbox_docker.py  verify_state_consistency.py
src/smartclaw/: SPEC.md  __init__.py  cli.py  console.py  debug_session_log.py  diagnostics.py  feishu_multiprocess.py  feishu_ws_server.py  interfaces.py  langsmith_env.py  logging_utils.py  paths.py  pid_check.py  server.py  server_monitoring.py  subprocess_io.py  tenant.py
standards/: AGENT-MANAGEMENT-v1.0.md  ARCHITECTURE-v1.0.md  CLI-COMMANDS-v1.0.md  CODE-REVIEW-CHECKLIST-v1.0.md  CODE-STYLE-v1.0.md  DEEPAGENTS_ANALYSIS-v1.0.md  DEVELOPMENT-NORM-v1.0.md  DOCKER-SANDBOX-ARCHITECTURE-v2.0.md  EPIC-DYNAMIC-PROGRESS-CARD-PLAN.md  EVENT_BUS_ARCHITECTURE-v1.0.md  KNOWLEDGE-CHECK-CHECKLIST-v1.0.md  MODULE-INTERFACE-STANDARD-v1.0.md  MULTI-PROCESS-ARCHITECTURE-v1.0.md  PRE-LAUNCH-AUDIT-v1.0.md  PROJECT-DECISION-LOG-v1.0.md  PROJECT-STATUS-v1.0.md  PROMPT-LIBRARY-v1.0.md  README-v1.0.md  SANDBOX-v1.0.md  SPEC-TEMPLATE-v1.0.md  SUBMODULE-CREATION-TEMPLATE-v1.0.md  VSOCK-TROUBLESHOOTING-v1.0.md  WRITE_TODOS-v1.0.md
tests/: __init__.py  _redis_real.py  conftest.py  test_agent_control_flow.py  test_agent_create.py  test_agent_workspace.py  test_architecture_alignment.py  test_bg_probe.py  test_bg_probe_decl.py  test_cli.py  test_config_paths_and_tenants.py  test_deepagents_write_guard.py  test_doctor_environment.py  test_execution_platform.py  test_feishu_accounts_parse.py  test_feishu_config_flat.py  test_feishu_formatter.py  test_feishu_runtime.py  test_host_command_gate.py  test_naming.py  test_shell_allowlist.py  test_workspace_bound_backend.py
tests/agent/: test_docker_backend.py  test_history_deepagents.py  test_loop_detector_bg_log.py
tests/auth/: test_webhook_replay_redis.py
(+226 files in other folders)
