[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartclaw"
version = "1.0.0"
description = "SmartClaw - 生产级企业 AI Agent 平台"
readme = "README.md"
license = "MIT"
# deepagents 执行内核要求 Python>=3.12；与 Dockerfile（python:3.12-slim）保持一致。
requires-python = ">=3.12"
authors = [
    { name = "SmartClaw Team", email = "smartclaw@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
# 设计：`uv pip install -e .` 即得到「可真正 smartclaw start」的完整后端闭包——
# 含 Web/CLI 框架 + Agent 执行内核（deepagents/LangChain/LangGraph）+ 飞书渠道 + 运行时基础设施。
# 版本与已验证环境一致（见 requirements-runtime.txt，作为容器层的等价镜像）。
# 唯一可选的是 PostgreSQL 多副本数据面后端（[postgres] extra），sqlite 默认零额外依赖。
dependencies = [
    # —— Web / CLI 框架 ——
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tomli-w>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "aiofiles>=23.0.0",
    "watchdog>=3.0.0",
    "PyJWT>=2.8.0",
    "pycryptodome>=3.19.0",
    # —— Agent 执行内核（Layer 3：Unified Execution Engine）——
    "deepagents>=0.5.5",
    "langchain>=1.2.0",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.2.0",
    "langgraph>=1.1.0",
    "langgraph-checkpoint>=4.0.0",
    "langgraph-prebuilt>=1.0.0",
    "langsmith>=0.7.0",
    # —— 飞书渠道（Layer 2）——
    "lark-oapi>=1.4",
    # —— 运行时基础设施（Layer 6）——
    "redis>=5.0",
    "tiktoken>=0.7",
    "orjson>=3.10",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=24.0.0",
    "redis>=5.0",
]
firecracker = [
    "requests>=2.28.0",
]
mcp = [
    "fastmcp>=2.14.4",
]
redis = [
    "redis>=5.0",
]
postgres = [
    "psycopg[binary,pool]>=3.1",
]

[project.scripts]
smartclaw = "smartclaw.cli:app"

[project.urls]
Homepage = "https://github.com/DaTingLi/smartclaw"
Repository = "https://github.com/DaTingLi/smartclaw"
Documentation = "https://github.com/DaTingLi/smartclaw#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/smartclaw"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
